--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>URL Shortener</title>
+	<title>URLsho</title>
 	<style>:root{--border:#e1e1e1}body{margin:0;font:20px/1.5 Verdana,Helvetica,sans-serif}.container{width:50%;margin:0 auto}.title{text-align:center}.wrapper{display:flex;flex-direction:column;gap:10px;margin-top:25%}.input-group{display:flex;flex-direction:column-reverse}label{font-weight:600}.iput{padding:10px;outline:0;border:2px solid grey;border-radius:4px}.shrt{font-weight:600;font-size:16px;background:#d3d3d3}#subtitle{margin:0}.li-w{margin-top:10%;padding:0;list-style:none}.li-w > li{background:#d3d3d3;padding:5px;border:2px solid grey;border-radius:4px}@media(max-width:650px){.container{width:95%}}</style>
 </head>
 <body>
 	<div class="container">
 		<form class="wrapper" method="post">
-			<h2 class="title">URL-Shortener</h2>
+			<h2 class="title">URLsho</h2>
 			<div class="input-group">
 				<input class="iput" type="url" name="link" id="link" required>
 				<label for="link">Enter URL</label>
